# test_repo

./: library.json
components/: post_build.py
components/es8311/: es8311.cpp  es8311.h  es8311_const.h
components/esp_adf/: CMakeLists.txt  __init__.py  apply_adf_patches.py.script  ensure_media_player.py  esp_adf.cpp  esp_adf.h
components/esp_adf/button/: __init__.py  esp_adf_button.cpp  esp_adf_button.h
components/esp_adf/include/: memory_utils.h
components/esp_adf/media_player/: __init__.py  automation.h  esp_adf_media_player.cpp  esp_adf_media_player.h  media_player.cpp  media_player.h
components/esp_adf/microphone/: __init__.py  esp_adf_microphone.cpp  esp_adf_microphone.h
components/esp_adf/speaker/: __init__.py  esp_adf_speaker.cpp  esp_adf_speaker.h  speaker.h
components/i2s_audio/speaker/: i2s_audio_speaker.cpp
components/media_player/: CMakeList.txt  media_player.cpp  media_player.h
